customize nav behavior based on signin & partialization

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,9 +14,14 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+// Responsive
+
+@import "responsive/*";
+
 // Variables
 @import "base/variables";
 
 
 // Partials
+@import "partials/*";
 @import "partials/layout/*";
